force-app/main/default/objects/Person__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>