force-app/main/default/objects/Person__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <label>Bank Account</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SBI</fullName>
            </value>
            <value>
                <fullName>BOB</fullName>
            </value>
            <value>
                <fullName>HDFC</fullName>
            </value>
            <value>
                <fullName>KALUPUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>