force-app/main/default/objects/Person__c/fields/Demate_Account__c.field-meta.xml
<CustomField>
    <fullName>Demate_Account__c</fullName>
    <label>Demate Account</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GROWW</fullName>
            </value>
            <value>
                <fullName>MOTILAL OSWAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>