force-app/main/default/objects/Person__c/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <label>Stock</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>